crates/lang-parse/tests/snapshots/parser__parser_attribute call.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..38,
            statements: StatementList {
                span: 0..38,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [
                    (
                        LocalAssignment(
                            LocalAssignment {
                                span: 0..37,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                attr: Attributes(
                                    [
                                        Attribute {
                                            span: 0..32,
                                            is_inner: false,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            commands: [
                                                Call(
                                                    Call {
                                                        span: 2..26,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        name: QualifiedName {
                                                            span: 2..5,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [],
                                                                ),
                                                            },
                                                            parts: [
                                                                Identifier {
                                                                    span: 2..5,
                                                                    name: "svg",
                                                                },
                                                            ],
                                                        },
                                                        arguments: ArgumentList {
                                                            span: 6..25,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [],
                                                                ),
                                                            },
                                                            arguments: [
                                                                Named(
                                                                    NamedArgument {
                                                                        span: 6..25,
                                                                        extras: ItemExtras {
                                                                            leading: LeadingExtras(
                                                                                [],
                                                                            ),
                                                                            trailing: TrailingExtras(
                                                                                [],
                                                                            ),
                                                                        },
                                                                        id: Identifier {
                                                                            span: 6..11,
                                                                            name: "style",
                                                                        },
                                                                        expr: Literal(
                                                                            Literal {
                                                                                span: 14..25,
                                                                                extras: ItemExtras {
                                                                                    leading: LeadingExtras(
                                                                                        [],
                                                                                    ),
                                                                                    trailing: TrailingExtras(
                                                                                        [],
                                                                                    ),
                                                                                },
                                                                                literal: String(
                                                                                    StringLiteral {
                                                                                        span: 14..25,
                                                                                        content: "fill:none",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    ],
                                ),
                                id: Identifier {
                                    span: 32..33,
                                    name: "a",
                                },
                                ty: None,
                                expr: Literal(
                                    Literal {
                                        span: 36..37,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        literal: Integer(
                                            IntegerLiteral {
                                                span: 36..37,
                                                value: 1,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        TrailingExtras(
                            [],
                        ),
                    ),
                ],
                tail: None,
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
