crates/lang-parse/tests/snapshots/parser__parser_attribute ident.snap
---
source: crates/lang-parse/tests/parser.rs
expression: parse(input)
---
Ok(
    Ast {
        span: 0..20,
        statements: StatementList {
            span: 0..20,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..19,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attr: [
                                Attribute {
                                    span: 0..14,
                                    is_inner: false,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    commands: [
                                        Ident(
                                            Identifier {
                                                span: 2..8,
                                                name: "export",
                                            },
                                        ),
                                    ],
                                },
                            ],
                            id: Identifier {
                                span: 14..15,
                                name: "a",
                            },
                            ty: None,
                            expr: Literal(
                                Literal {
                                    span: 18..19,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 18..19,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
