crates/lang-parse/tests/snapshots/parser__parser_attribute workbench.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x7b3f23db7b360804",
        output_hash: "0x7ab68b50ffe8ebf3",
        tree: (
            span: (
                start: 0,
                end: 90,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 90,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Workbench((
                        span: (
                            start: 0,
                            end: 90,
                        ),
                        keyword_span: (
                            start: 25,
                            end: 29,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 90,
                            ),
                            lines: [],
                        ),
                        kind: Part,
                        attr: ([
                            (
                                span: (
                                    start: 0,
                                    end: 25,
                                ),
                                is_inner: false,
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                commands: [
                                    Assignment((
                                        span: (
                                            start: 2,
                                            end: 19,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        attr: ([]),
                                        id: (
                                            span: (
                                                start: 2,
                                                end: 7,
                                            ),
                                            name: "color",
                                        ),
                                        ty: None,
                                        expr: Literal((
                                            span: (
                                                start: 10,
                                                end: 19,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            literal: String((
                                                span: (
                                                    start: 10,
                                                    end: 19,
                                                ),
                                                content: "#FF00FF",
                                            )),
                                        )),
                                    )),
                                ],
                            ),
                        ]),
                        vis: None,
                        id: (
                            span: (
                                start: 30,
                                end: 33,
                            ),
                            name: "Foo",
                        ),
                        parameters: (
                            span: (
                                start: 34,
                                end: 34,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parameters: [],
                        ),
                        body: (
                            span: (
                                start: 36,
                                end: 90,
                            ),
                            statements: (
                                span: (
                                    start: 37,
                                    end: 89,
                                ),
                                extras: (
                                    leading: ([
                                        Whitespace(("\n        ")),
                                    ]),
                                    trailing: ([]),
                                ),
                                statements: [
                                    (Expression((
                                        span: (
                                            start: 46,
                                            end: 83,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        attr: ([]),
                                        expr: Call((
                                            span: (
                                                start: 46,
                                                end: 83,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            path: (
                                                span: (
                                                    start: 46,
                                                    end: 54,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                prefix: None,
                                                parts: [
                                                    (
                                                        span: (
                                                            start: 46,
                                                            end: 54,
                                                        ),
                                                        name: "Cylinder",
                                                    ),
                                                ],
                                            ),
                                            arguments: (
                                                span: (
                                                    start: 55,
                                                    end: 82,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                arguments: [
                                                    Named((
                                                        span: (
                                                            start: 55,
                                                            end: 68,
                                                        ),
                                                        extras: (
                                                            leading: ([]),
                                                            trailing: ([]),
                                                        ),
                                                        id: (
                                                            span: (
                                                                start: 55,
                                                                end: 61,
                                                            ),
                                                            name: "height",
                                                        ),
                                                        expr: Literal((
                                                            span: (
                                                                start: 64,
                                                                end: 68,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            literal: Quantity((
                                                                span: (
                                                                    start: 64,
                                                                    end: 68,
                                                                ),
                                                                value: "10",
                                                                unit: (
                                                                    span: (
                                                                        start: 66,
                                                                        end: 68,
                                                                    ),
                                                                    name: "mm",
                                                                ),
                                                            )),
                                                        )),
                                                    )),
                                                    Named((
                                                        span: (
                                                            start: 70,
                                                            end: 82,
                                                        ),
                                                        extras: (
                                                            leading: ([]),
                                                            trailing: ([]),
                                                        ),
                                                        id: (
                                                            span: (
                                                                start: 70,
                                                                end: 76,
                                                            ),
                                                            name: "radius",
                                                        ),
                                                        expr: Literal((
                                                            span: (
                                                                start: 79,
                                                                end: 82,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            literal: Quantity((
                                                                span: (
                                                                    start: 79,
                                                                    end: 82,
                                                                ),
                                                                value: "5",
                                                                unit: (
                                                                    span: (
                                                                        start: 80,
                                                                        end: 82,
                                                                    ),
                                                                    name: "mm",
                                                                ),
                                                            )),
                                                        )),
                                                    )),
                                                ],
                                            ),
                                        )),
                                    )), ([
                                        Whitespace(("\n    ")),
                                    ])),
                                ],
                                tail: None,
                            ),
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
